@@ -42,7 +42,7 @@ public class FireballHandler implements Listener {
         }
 
         // 获取火球发射者
-        GamePlayer ownerPlayer = GamePlayer.get((UUID) fireball.getMetadata(FIREBALL_METADATA).getFirst().value());
+        GamePlayer ownerPlayer = GamePlayer.get((UUID) fireball.getMetadata(FIREBALL_METADATA).get(0).value());
         if (ownerPlayer == null) {
             return;
         }
